--- a/docs/api/qiskit/dev/qiskit.transpiler.passes.SabreSwap.mdx
+++ b/docs/api/qiskit/dev/qiskit.transpiler.passes.SabreSwap.mdx
@@ -8,12 +8,12 @@ python_api_name: qiskit.transpiler.passes.SabreSwap
 
 # SabreSwap
 
-<Class id="qiskit.transpiler.passes.SabreSwap" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/main/qiskit/transpiler/passes/routing/sabre_swap.py#L40-L277" signature="qiskit.transpiler.passes.SabreSwap(*args, **kwargs)" modifiers="class">
+<Class id="qiskit.transpiler.passes.SabreSwap" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/main/qiskit/transpiler/passes/routing/sabre_swap.py#L40-L281" signature="qiskit.transpiler.passes.SabreSwap(*args, **kwargs)" modifiers="class">
   Bases: [`TransformationPass`](qiskit.transpiler.TransformationPass "qiskit.transpiler.basepasses.TransformationPass")
 
   Map input circuit onto a backend topology via insertion of SWAPs.
 
-  Implementation of the SWAP-based heuristic search from the SABRE qubit mapping paper \[1] (Algorithm 1). The heuristic aims to minimize the number of lossy SWAPs inserted and the depth of the circuit.
+  Implementation of the SWAP-based heuristic search from the SABRE qubit mapping paper \[2] (Algorithm 1) with the modifications from the LightSABRE paper \[1]. The heuristic aims to minimize the number of lossy SWAPs inserted and the depth of the circuit.
 
   This algorithm starts from an initial layout of virtual qubits onto physical qubits, and iterates over the circuit DAG until all gates are exhausted, inserting SWAPs along the way. It only considers 2-qubit gates as only those are germane for the mapping problem (it is assumed that 3+ qubit gates are already decomposed).
 
@@ -25,7 +25,7 @@ python_api_name: qiskit.transpiler.passes.SabreSwap
 
   **References:**
 
-  \[1] Li, Gushu, Yufei Ding, and Yuan Xie. “Tackling the qubit mapping problem for NISQ-era quantum devices.” ASPLOS 2019. [arXiv:1809.02573](https://arxiv.org/pdf/1809.02573.pdf)
+  \[1] Henry Zou and Matthew Treinish and Kevin Hartman and Alexander Ivrii and Jake Lishman. “LightSABRE: A Lightweight and Enhanced SABRE Algorithm” [arXiv:2409.08368](https://doi.org/10.48550/arXiv.2409.08368) \[2] Li, Gushu, Yufei Ding, and Yuan Xie. “Tackling the qubit mapping problem for NISQ-era quantum devices.” ASPLOS 2019. [arXiv:1809.02573](https://arxiv.org/pdf/1809.02573.pdf)
 
   SabreSwap initializer.
 
@@ -125,7 +125,7 @@ python_api_name: qiskit.transpiler.passes.SabreSwap
 
   ### run
 
-  <Function id="qiskit.transpiler.passes.SabreSwap.run" github="https://github.com/Qiskit/qiskit/tree/main/qiskit/transpiler/passes/routing/sabre_swap.py#L175-L277" signature="run(dag)">
+  <Function id="qiskit.transpiler.passes.SabreSwap.run" github="https://github.com/Qiskit/qiskit/tree/main/qiskit/transpiler/passes/routing/sabre_swap.py#L179-L281" signature="run(dag)">
     Run the SabreSwap pass on dag.
 
     **Parameters**
