--- a/docs/api/qiskit-ibm-runtime/dev/index.mdx
+++ b/docs/api/qiskit-ibm-runtime/dev/index.mdx
@@ -13,4 +13,5 @@ description: API documentation for the qiskit-ibm-runtime client
 *   [Transpiler scheduling passes (`qiskit_ibm_runtime.transpiler.passes.scheduling`)](qiskit_ibm_runtime.transpiler.passes.scheduling)
 *   [Fake Provider (`qiskit_ibm_runtime.fake_provider`)](fake_provider)
 *   [Execution Spans (`qiskit_ibm_runtime.execution_span`)](execution_span)
+*   [Visualization (`qiskit_ibm_runtime.visualization`)](visualization)
 
