--- a/docs/api/qiskit/dev/qiskit.circuit.library.PauliEvolutionGate.mdx
+++ b/docs/api/qiskit/dev/qiskit.circuit.library.PauliEvolutionGate.mdx
@@ -8,7 +8,7 @@ python_api_name: qiskit.circuit.library.PauliEvolutionGate
 
 # PauliEvolutionGate
 
-<Class id="qiskit.circuit.library.PauliEvolutionGate" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/main/qiskit/circuit/library/pauli_evolution.py#L28-L153" signature="qiskit.circuit.library.PauliEvolutionGate(operator, time=1.0, label=None, synthesis=None)" modifiers="class">
+<Class id="qiskit.circuit.library.PauliEvolutionGate" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/main/qiskit/circuit/library/pauli_evolution.py#L28-L154" signature="qiskit.circuit.library.PauliEvolutionGate(operator, time=1.0, label=None, synthesis=None)" modifiers="class">
   Bases: [`Gate`](qiskit.circuit.Gate "qiskit.circuit.gate.Gate")
 
   Time-evolution of an operator consisting of Paulis.
@@ -36,6 +36,7 @@ $$
 
   X = SparsePauliOp("X")
   Z = SparsePauliOp("Z")
+  I = SparsePauliOp("I")
 
   # build the evolution gate
   operator = (Z ^ Z) - 0.1 * (X ^ I)
@@ -179,7 +180,7 @@ $$
 
   ### validate\_parameter
 
-  <Function id="qiskit.circuit.library.PauliEvolutionGate.validate_parameter" github="https://github.com/Qiskit/qiskit/tree/main/qiskit/circuit/library/pauli_evolution.py#L146-L153" signature="validate_parameter(parameter)">
+  <Function id="qiskit.circuit.library.PauliEvolutionGate.validate_parameter" github="https://github.com/Qiskit/qiskit/tree/main/qiskit/circuit/library/pauli_evolution.py#L147-L154" signature="validate_parameter(parameter)">
     Gate parameters should be int, float, or ParameterExpression
 
     **Return type**
