--- a/docs/api/qiskit/dev/qiskit.primitives.BaseEstimator.mdx
+++ b/docs/api/qiskit/dev/qiskit.primitives.BaseEstimator.mdx
@@ -59,7 +59,7 @@ python_api_name: qiskit.primitives.BaseEstimator
     with bound parameters
 
     ```python
-    values = parameter_values[i].
+    values = parameter_values[i]
     ```
 
     **Parameters**
