--- a/docs/api/qiskit/dev/qiskit.primitives.DataBin.mdx
+++ b/docs/api/qiskit/dev/qiskit.primitives.DataBin.mdx
@@ -8,19 +8,27 @@ python_api_name: qiskit.primitives.DataBin
 
 # DataBin
 
-<Class id="qiskit.primitives.DataBin" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/main/qiskit/primitives/containers/data_bin.py#L32-L143" signature="qiskit.primitives.DataBin(*, shape=(), **data)" modifiers="class">
+<Class id="qiskit.primitives.DataBin" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/main/qiskit/primitives/containers/data_bin.py#L32-L151" signature="qiskit.primitives.DataBin(*, shape=(), **data)" modifiers="class">
   Bases: `ShapedMixin`
 
   Namespace for storing data.
 
   ```python
+  import numpy as np
+  from qiskit.primitives import DataBin, BitArray
+
   data = DataBin(
-      alpha=BitArray.from_bitstrings(["0010"]),
+      alpha=BitArray.from_samples(["0010"]),
       beta=np.array([1.2])
   )
 
   print("alpha data:", data.alpha)
   print("beta data:", data.beta)
+  ```
+
+  ```python
+  alpha data: BitArray(<shape=(), num_shots=1, num_bits=2>)
+  beta data: [1.2]
   ```
 
   **Parameters**
@@ -51,7 +59,7 @@ python_api_name: qiskit.primitives.DataBin
 
   ### items
 
-  <Function id="qiskit.primitives.DataBin.items" github="https://github.com/Qiskit/qiskit/tree/main/qiskit/primitives/containers/data_bin.py#L125-L127" signature="items()">
+  <Function id="qiskit.primitives.DataBin.items" github="https://github.com/Qiskit/qiskit/tree/main/qiskit/primitives/containers/data_bin.py#L133-L135" signature="items()">
     Return a view of field names and values
 
     **Return type**
@@ -61,7 +69,7 @@ python_api_name: qiskit.primitives.DataBin
 
   ### keys
 
-  <Function id="qiskit.primitives.DataBin.keys" github="https://github.com/Qiskit/qiskit/tree/main/qiskit/primitives/containers/data_bin.py#L117-L119" signature="keys()">
+  <Function id="qiskit.primitives.DataBin.keys" github="https://github.com/Qiskit/qiskit/tree/main/qiskit/primitives/containers/data_bin.py#L125-L127" signature="keys()">
     Return a view of field names.
 
     **Return type**
@@ -71,7 +79,7 @@ python_api_name: qiskit.primitives.DataBin
 
   ### values
 
-  <Function id="qiskit.primitives.DataBin.values" github="https://github.com/Qiskit/qiskit/tree/main/qiskit/primitives/containers/data_bin.py#L121-L123" signature="values()">
+  <Function id="qiskit.primitives.DataBin.values" github="https://github.com/Qiskit/qiskit/tree/main/qiskit/primitives/containers/data_bin.py#L129-L131" signature="values()">
     Return a view of values.
 
     **Return type**
