--- a/docs/api/qiskit/dev/qiskit.pulse.transforms.AlignFunc.mdx
+++ b/docs/api/qiskit/dev/qiskit.pulse.transforms.AlignFunc.mdx
@@ -8,7 +8,7 @@ python_api_name: qiskit.pulse.transforms.AlignFunc
 
 # AlignFunc
 
-<Class id="qiskit.pulse.transforms.AlignFunc" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/main/qiskit/pulse/transforms/alignments.py#L328-L404" signature="qiskit.pulse.transforms.AlignFunc(duration, func)" modifiers="class">
+<Class id="qiskit.pulse.transforms.AlignFunc" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/main/qiskit/pulse/transforms/alignments.py#L328-L406" signature="qiskit.pulse.transforms.AlignFunc(duration, func)" modifiers="class">
   Bases: [`AlignmentKind`](pulse#qiskit.pulse.transforms.AlignmentKind "qiskit.pulse.transforms.alignments.AlignmentKind")
 
   Allocate instructions at position specified by callback function.
@@ -20,8 +20,10 @@ python_api_name: qiskit.pulse.transforms.AlignFunc
   For example, UDD sequence with 10 pulses can be specified with following function.
 
   ```python
+  import numpy as np
+
   def udd10_pos(j):
-  return np.sin(np.pi*j/(2*10 + 2))**2
+      return np.sin(np.pi*j/(2*10 + 2))**2
   ```
 
   <Admonition title="Note" type="note">
@@ -57,7 +59,7 @@ python_api_name: qiskit.pulse.transforms.AlignFunc
 
   ### align
 
-  <Function id="qiskit.pulse.transforms.AlignFunc.align" github="https://github.com/Qiskit/qiskit/tree/main/qiskit/pulse/transforms/alignments.py#L379-L404" signature="align(schedule)">
+  <Function id="qiskit.pulse.transforms.AlignFunc.align" github="https://github.com/Qiskit/qiskit/tree/main/qiskit/pulse/transforms/alignments.py#L381-L406" signature="align(schedule)">
     Reallocate instructions according to the policy.
 
     Only top-level sub-schedules are aligned. If sub-schedules are nested, nested schedules are not recursively aligned.
