--- a/docs/api/qiskit/dev/qiskit.visualization.pass_manager_drawer.mdx
+++ b/docs/api/qiskit/dev/qiskit.visualization.pass_manager_drawer.mdx
@@ -10,7 +10,7 @@ python_api_name: qiskit.visualization.pass_manager_drawer
 
 # qiskit.visualization.pass\_manager\_drawer
 
-<Function id="qiskit.visualization.pass_manager_drawer" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/main/qiskit/utils/lazy_tester.py#L32-L101" signature="qiskit.visualization.pass_manager_drawer(pass_manager, filename=None, style=None, raw=False)">
+<Function id="qiskit.visualization.pass_manager_drawer" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/main/qiskit/utils/lazy_tester.py#L32-L90" signature="qiskit.visualization.pass_manager_drawer(pass_manager, filename=None, style=None, raw=False)">
   Draws the pass manager.
 
   This function needs [pydot](https://github.com/pydot/pydot), which in turn needs [Graphviz](https://www.graphviz.org/) to be installed.
@@ -38,23 +38,12 @@ python_api_name: qiskit.visualization.pass_manager_drawer
   **Example**
 
   ```python
-   %matplotlib inline
   from qiskit import QuantumCircuit
-  from qiskit.compiler import transpile
-  from qiskit.transpiler import PassManager
+  from qiskit.transpiler import generate_preset_pass_manager
   from qiskit.visualization import pass_manager_drawer
-  from qiskit.transpiler.passes import Unroller
 
-  circ = QuantumCircuit(3)
-  circ.ccx(0, 1, 2)
-  circ.draw()
-
-  pass_ = Unroller(['u1', 'u2', 'u3', 'cx'])
-  pm = PassManager(pass_)
-  new_circ = pm.run(circ)
-  new_circ.draw(output='mpl')
-
-  pass_manager_drawer(pm, "passmanager.jpg")
+  pm = generate_preset_pass_manager(optimization_level=0)
+  pass_manager_drawer(pm)
   ```
 </Function>
 
