Use box-drawing characters

--- a/docs/guides/serverless-first-program.ipynb
+++ b/docs/guides/serverless-first-program.ipynb
@@ -88,10 +88,10 @@
     "\n",
     "```text\n",
     "serverless_program\n",
-    "|___ program_uploader.ipynb\n",
-    "|___ source_files\n",
-    "     |___ transpile_remote.py\n",
-    "     |___ *.py\n",
+    "├── program_uploader.ipynb\n",
+    "└── source_files\n",
+    "    ├── transpile_remote.py\n",
+    "    └── *.py\n",
     "```\n",
     "\n",
     "Serverless uploads the contents of `source_files` to run remotely. Once these are set up, you can adjust `transpile_remote.py` to fetch inputs and return outputs.\n",
