Replace mention of %%writefile with explanation of serverless program file

--- a/docs/guides/serverless-first-program.ipynb
+++ b/docs/guides/serverless-first-program.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "Start with the following example that transpiles a `circuit` against a given `backend` and target `optimization_level`, and gradually add more elements to deploy your workload to Qiskit Serverless.\n",
     "\n",
-    "This page uses the [`%%writefile`](https://ipython.readthedocs.io/en/stable/interactive/magics.html#cellmagic-writefile) \"magic\" command in Jupyter to write cell contents to a file rather than run them."
+    "Put the following code cell in the file `./source_files/transpile_remote.py`. This file is the program we'll upload to Qiskit Serverless."
    ]
   },
   {
