Fix sentence and add explanation of deployment section

--- a/docs/guides/serverless-first-program.ipynb
+++ b/docs/guides/serverless-first-program.ipynb
@@ -98,7 +98,7 @@
     "\n",
     "### Get program arguments\n",
     "\n",
-    "Your initial `transpile_remote.py` has two inputs: `circuits` and `backend`. Serverless is currently limited to only accept serializable inputs and outputs. For this reason, you cannot pass in `backend` directly, so use `backend_name` as a string instead."
+    "Your initial `transpile_remote.py` has three inputs: `circuits`, `backend_name`, and `optimization_level`. Serverless is currently limited to only accept serializable inputs and outputs. For this reason, you cannot pass in `backend` directly, so use `backend_name` as a string instead."
    ]
   },
   {
@@ -199,6 +199,8 @@
    "metadata": {},
    "source": [
     "## Deploy to IBM Quantum Platform\n",
+    "\n",
+    "The previous section created a program to be run remotely. The code cells in this section upload that program to Qiskit Serverless.",
     "\n",
     "Use `qiskit-ibm-catalog` to authenticate to `QiskitServerless` with your API token, which you can find in your [IBM Quantum account](https://quantum.ibm.com/account), and upload the program.\n",
     "\n",
