--- a/docs/guides/serverless-first-program.ipynb
+++ b/docs/guides/serverless-first-program.ipynb
@@ -239,7 +239,7 @@
     "    title=\"transpile_remote_serverless\",\n",
     "    entrypoint=\"transpile_remote.py\",\n",
     "    working_dir=\"./source_files/\",\n",
-    "\tdependencies=[\"qiskit-aer==0.14.1\"],\n",
+    "    dependencies=[\"qiskit-aer==0.14.1\"],\n",
     ")"
    ]
   },
