--- a/docs/guides/save-jobs.ipynb
+++ b/docs/guides/save-jobs.ipynb
@@ -66,7 +66,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "43d0f06e-f97f-4c19-b242-02cb0bd420a9",
-   "metadata": {},
+   "metadata": {
+     "tags": [
+       "ignore-warnings"
+     ]
+   },
    "outputs": [
     {
      "name": "stdout",
