--- a/docs/guides/bit-ordering.mdx
+++ b/docs/guides/bit-ordering.mdx
@@ -3,7 +3,7 @@ title: Bit-ordering in the Qiskit SDK
 description: Learn about Qiskit SDK's ordering conventions and why we chose them
 ---
 
-# Bit-ordering in the Qiskit SDK!
+# Bit-ordering in the Qiskit SDK
 
 If you have a set of $n$ bits (or qubits), you'll usually label each bit $0
 \rightarrow n-1$. Different softwares and resources must choose how they order
