--- a/docs/guides/ibm-circuit-function.ipynb
+++ b/docs/guides/ibm-circuit-function.ipynb
@@ -271,11 +271,11 @@
     "\n",
     "Each `PubResult` contains a `data` and a `metadata` field. \n",
     "\n",
-    "- The `data` field contains at least an array of expectation values (`PubResult.data.evs`) and an array of standard errors (`PubResult.data.stds`). It can also contain more data depending on the options used.\n",
+    "- The `data` field contains at least an array of expectation values (`PubResult.data.evs`) and an array of standard errors (`PubResult.data.stds`). It can also contain more data, depending on the options used.\n",
     "\n",
     "- The `metadata` field contains PUB-level metadata (`PubResult.metadata`).\n",
     "\n",
-    "The below code snippet describes the `PrimitiveResult` (and associated `PubResult`) format."
+    "The following code snippet describes the `PrimitiveResult` (and associated `PubResult`) format."
    ]
   },
   {
